# SwaySettings

./: .editorconfig  .gitignore  .uncrustify.cfg  PKGBUILD  README.md  meson.build  meson_options.txt  org.erikreider.swaysettings.json  swaysettings.rpkg.spec
data/: meson.build  org.erikreider.swaysettings.appdata.xml.in  org.erikreider.swaysettings.desktop.in  org.erikreider.swaysettings.gschema.xml  org.freedesktop.impl.portal.desktop.swaysettings.service.in  style.css  swaysettings.gresource.xml  swaysettings.portal  xdg-desktop-portal-swaysettings.service.in
data/icons/: meson.build
data/style/: base.scss  locker.scss  meson.build  screenshot.scss  settings-window.scss
data/ui/: AboutPCContent.blp  AppChooserDialog.blp  AppChooserDialogRow.blp  AppChooserDropDownItem.blp  BluetoothDeviceRow.blp  BluetoothDeviceRow.ui  BluezPairDialog.blp  KeyboardInputSelector.blp  LockerWindow.blp  OrderListSelector.blp  PowerDevice.blp  PowerPageContent.blp  PulseContent.blp  PulseDeviceComboRow.blp  PulseDeviceComboRowItem.blp  PulsePage.blp  PulseSinkInput.blp  PulseSinkInputRow.blp  PulseSliderWidget.blp  ScreenshotList.blp  ScreenshotPreview.blp  StartupAppsItem.blp  StartupAppsItem.ui  StartupAppsRow.blp  StorageRow.blp  UserListItem.blp  UserListItem.ui  Users.blp  Users.ui  swaysettings.cmb
services/: meson.build
services/systemd/: sway-wallpaper.service.in  swaysettings-upower-monitor.service.in
src/: AppIds.vala  Constants.vala  Functions.vala  PPD.vala  Power.vala  PowerBatteryState.vala  Strings.vala  UserMgr.vala  Utils.vala  auto_start.vala  constants.vala  main.vala  meson.build  style.css  sway_settings.gresource.xml  swaysettings.gresource.xml
src/AutoStart/: AutoStart.vala  meson.build
src/Functions/: Functions.vala
src/IPC/: IPC.vala
src/InputSettings/: Input_Settings.vala
src/Item/: Item.ui  Item.vala
src/ListItem/: ListItem.vala
src/List_Item/: List_Item.ui  List_Item.vala
src/Locker/: Locker.vala  LockerWindow.vala  meson.build  pam_helper.c  pam_helper.vala
src/Page/: Input_Page.vala  Page.ui  Page.vala
src/Pages/Appearance/: Appearance.vala  BackgroundWidget.vala  ThemesWidget.vala
src/Pages/Apps/: Apps.vala  Default_Apps.vala  Desktop_App_Chooser.ui  Startup_Apps.vala  Startup_Apps_Item.ui
src/Pages/Background/: BackgroundPage.vala  Background_Page.vala
src/Pages/Bluetooth/: BluetoothDeviceRow.vala  Bluetooth_Device_Row.ui  Bluetooth_Device_Row.vala  Bluetooth_Page.vala
src/Pages/Bluetooth/Bluez/: Bluez_Agent.vala  Bluez_Daemon.vala  Bluez_Device.vala  Bluez_Pair_Dialog.ui  Bluez_Pair_Dialog.vala
src/Pages/DefaultApps/: Default_Apps.vala
src/Pages/Default_Apps/: Default_Apps.vala
src/Pages/Keybindings/: Keybind_Action.vala  Keybind_Variable.vala  Keybindings_Page.vala
src/Pages/KeyboardPage/: Keyboard_Page.vala
src/Pages/Mouse/: General_Page.vala  Input_Settings.vala  Mouse.vala  Mouse_Page.vala  Trackad_Page.vala  Trackpad_Page.vala
src/Pages/MousePage/: Mouse_Page.vala
src/Pages/Pulse/: Pulse.vala  PulseDevice.vala  PulsePage.vala  PulseSinkInput.ui  PulseSinkInput.vala  Pulse_Client.vala  Pulse_Content.ui  Pulse_Daemon.vala
src/Pages/StartupApps/: Startup_Apps.vala  Startup_Apps_Chooser.ui  Startup_Apps_Item.ui
src/Pages/Swaync/: Swaync.vala
src/Pages/Themes/: ThemePreviewItem.ui  ThemePreviewItem.vala  ThemesPage.ui  ThemesPage.vala  ThemesWidget.vala  Themes_Page.vala
src/Pages/TrackpadPage/: Trackpad_Page.vala
src/Pages/Users/: Users.ui  Users.vala  Users_PasswordDialog.ui
src/Portal/: BaseService.vala  Portal.vala  meson.build
src/Portal/Services/: Settings.vala  SettingsPortal.vala  Wallpaper.vala  WallpaperPortal.vala  meson.build
src/Rfkill/: Rfkill.vala
src/Screenshot/: Grim.vala  Screenshot.vala  ScreenshotGrid.vala  ScreenshotList.vala  ScreenshotPreview.vala  ScreenshotWindow.vala  meson.build
src/Settings/: main.vala  meson.build  swaysettings.gresource.xml
src/Settings/Functions/: Functions.vala
src/Settings/IPC/: IPC.vala
src/Settings/InputSettings/: InputSettings.vala
src/Settings/Item/: Item.ui  Item.vala
src/Settings/ListItem/: ListItem.vala
src/Settings/Page/: InputPage.vala  IpcPage.vala  Page.ui  Page.vala
src/Settings/Pages/: meson.build
src/Settings/Pages/About/: About.vala
src/Settings/Pages/Background/: BackgroundPage.vala
src/Settings/Pages/Bluetooth/: BluetoothDeviceRow.vala  BluetoothPage.vala
src/Settings/Pages/DefaultApps/: DefaultApps.vala
src/Settings/Pages/KeyboardPage/: KeyboardPage.vala
src/Settings/Pages/MousePage/: MousePage.vala
src/Settings/Pages/PowerPage/: BatteryGraphWidget.vala  PPD.vala  PowerBatteryState.vala  PowerDevice.vala  PowerDeviceList.vala  PowerInfoBanner.vala  PowerModeRow.vala  PowerPage.vala  UPower.vala
src/Settings/Pages/Pulse/: DeviceComboRow.vala  DeviceComboRowItem.vala  PulseDaemon.vala  PulseDevice.vala  PulsePage.vala  PulseSinkInput.vala  SinkInputRow.vala  SliderWidget.vala  meson.build
src/Settings/Pages/ScreenshotPage/: ScreenshotPage.vala
src/Settings/Pages/StartupApps/: StartupApps.vala  StartupAppsRow.vala
src/Settings/Pages/Swaync/: Swaync.vala
src/Settings/Pages/Themes/: ThemesPage.vala  (+1 more)
src/Settings/Rfkill/: Rfkill.vala
src/Settings/UserMgr/: UserMgr.vala
src/Settings/Widgets/: AppChooserDialog.vala  AppChooserDropDown.vala  KeyboardInputSelector.vala  OrderListSelector.vala  ThumbnailImage.vala  meson.build
src/Settings/Window/: SidebarListItem.vala  Window.ui  Window.vala
src/UPowerMonitor/: UPowerMonitor.vala  UPowerMonitorDevice.vala  meson.build
src/Utils/: dbus.vala  fs.vala  gschema.vala  meson.build  vala.vala  wallpaper.vala  widgets.c  widgets.vala
src/Wallpaper/: Animation.vala  Wallpaper.vala  WallpaperWindow.vala  Window.vala  meson.build
src/Widgets/ActionDialog/: ActionDialog.ui  ActionDialog.vala
src/Widgets/KeyboardInputSelector/: KeyboardInputSelector.ui  KeyboardInputSelector.vala
src/Widgets/OrderListSelector/: OrderListSelector.ui  OrderListSelector.vala
src/Widgets/ThumbnailImage/: ThumbnailImage.vala
src/Window/: Window.ui  Window.vala
(+23 files in other folders)
