swaysettings_settings_sources += files([
  'About/About.vala',
  'Background/BackgroundPage.vala',
  'Bluetooth/BluetoothPage.vala',
  'Bluetooth/BluetoothDeviceRow.vala',
  'Bluetooth/Bluez/BluezPairDialog.vala',
  'Bluetooth/Bluez/BluezDaemon.vala',
  'Bluetooth/Bluez/BluezAdapter.vala',
  'Bluetooth/Bluez/BluezDevice.vala',
  'Bluetooth/Bluez/BluezAgent.vala',
  'Themes/ThemesPage.vala',
  'Themes/ThemePreviewItem.vala',
  'KeyboardPage/KeyboardPage.vala',
  'MousePage/MousePage.vala',
  'TrackpadPage/TrackpadPage.vala',
  'DefaultApps/DefaultApps.vala',
  'ScreenshotPage/ScreenshotPage.vala',
  'StartupApps/StartupApps.vala',
  'Swaync/Swaync.vala',
  'Users/Users.vala',
  'Pulse/PulsePage.vala',
  'Pulse/PulseDaemon.vala',
  'Pulse/PulseDevice.vala',
  'Pulse/PulseSinkInput.vala',
  'PowerPage/PowerPage.vala',
  'PowerPage/PowerModeRow.vala',
  'PowerPage/PowerInfoBanner.vala',
  'PowerPage/PowerDevice.vala',
  'PowerPage/PowerDeviceList.vala',
  'PowerPage/BatteryGraphWidget.vala',
  join_paths(meson.current_source_dir(), '..', '..', 'PowerBatteryState.vala'),
  join_paths(meson.current_source_dir(), '..', '..', 'PPD.vala'),
  'PowerPage/UPower.vala',
])
