page_sources = []
subdir('Pulse')
swaysettings_settings_sources += page_sources

# TODO: Move into dirs
swaysettings_settings_sources += files(
  'About/About.vala',
  'Background/BackgroundPage.vala',
  'Bluetooth/BluetoothPage.vala',
  'Bluetooth/BluetoothDeviceRow.vala',
  'Bluetooth/Bluez/BluezPairDialog.vala',
  'Bluetooth/Bluez/BluezDaemon.vala',
  'Bluetooth/Bluez/BluezAdapter.vala',
  'Bluetooth/Bluez/BluezDevice.vala',
  'Bluetooth/Bluez/BluezAgent.vala',
  'Themes/ThemesPage.vala',
  'Themes/ThemePreviewItem.vala',
  'KeyboardPage/KeyboardPage.vala',
  'MousePage/MousePage.vala',
  'TrackpadPage/TrackpadPage.vala',
  'DefaultApps/DefaultApps.vala',
  'ScreenshotPage/ScreenshotPage.vala',
  'StartupApps/StartupApps.vala',
  'Users/Users.vala',
  'PowerPage/PowerPage.vala',
  'PowerPage/PowerModeRow.vala',
  'PowerPage/PowerInfoBanner.vala',
  'PowerPage/PowerDevice.vala',
  'PowerPage/PowerDeviceList.vala',
  'PowerPage/BatteryGraphWidget.vala',
)
