page_sources = []
subdir('Pulse')
swaysettings_settings_sources += page_sources

# TODO: Move into dirs
swaysettings_settings_sources += files(
  'About/About.vala',
  'Background/BackgroundPage.vala',
  'Bluetooth/BluetoothDeviceRow.vala',
  'Bluetooth/BluetoothPage.vala',
  'Bluetooth/Bluez/BluezAdapter.vala',
  'Bluetooth/Bluez/BluezAgent.vala',
  'Bluetooth/Bluez/BluezDaemon.vala',
  'Bluetooth/Bluez/BluezDevice.vala',
  'Bluetooth/Bluez/BluezPairDialog.vala',
  'DefaultApps/DefaultApps.vala',
  'KeyboardPage/KeyboardPage.vala',
  'MousePage/MousePage.vala',
  'PowerPage/BatteryGraphWidget.vala',
  'PowerPage/PowerDevice.vala',
  'PowerPage/PowerDeviceList.vala',
  'PowerPage/PowerInfoBanner.vala',
  'PowerPage/PowerModeRow.vala',
  'PowerPage/PowerPage.vala',
  'ScreenshotPage/ScreenshotPage.vala',
  'StartupApps/StartupApps.vala',
  'StartupApps/StartupAppsRow.vala',
  'Themes/ThemePreviewItem.vala',
  'Themes/ThemesPage.vala',
  'TrackpadPage/TrackpadPage.vala',
  'Users/Users.vala',
)
